# rust-ventures

./: Cargo.toml  README.md  cargo.toml
async_learning/: Cargo.toml
chapter-10/: Cargo.toml  README.md
chapter-10/src/: generics.rs  lib.rs  lifetimes.rs  main.rs
chapter-13/: README.md
chapter-17/: README.md
chapter-18/: README.md
chapter-19/: Cargo.toml  README.md
chapter-20/src/: lib.rs
chat-service/: Cargo.toml
chat-service/src/: main.rs
first_serversetup/: Cargo.toml
first_serversetup/src/: lib.rs
microsoft_learning/hello_world/: .gitignore  README.md
microsoft_learning/hello_world/src/: main.rs  variables.rs
my-redis/: Cargo.toml  README.md
my-redis/examples/: hello-redis.rs
my-redis/src/: main.rs
rust_the_book/: Cargo.toml  README.md
rust_the_book/src/: generics.rs  lib.rs  lifetimes.rs
zero2prod/: Cargo.toml
zero2prod/src/: main.rs
